# numba_exctinction

./: .gitignore  README.md  requirements.txt  setup.cfg
docs/: conf.py  example_link.nblink  index.rst  installation.rst
examples/: compare.ipynb
examples/notebooks/: compare.ipynb
numba_extinction/: main.py  numba_extinction.py
numba_extinction.egg-info/: PKG-INFO  SOURCES.txt
numba_extinction/models/: calzetti_00.py  ccm_89.py  fitzpatrick_99.py  fm07.py  gordon_23.py  odonnell_94.py  vcg_04.py
