[metadata]
name = numba_extinction
version = 0.1
author = Francesco Guarneri
author_email = fguarneri@hs.uni-hamburg.de
description = extinction.py rewritten almost from scratch using Numba.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/cosmic-dawn-group/PLACEHOLDER
project_urls =
    Bug Tracker = https://github.com/cosmic-dawn-group/PLACEHOLDER/issues
license = BSD-3-Clause
keywords =
    astronomy
    science
    python
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics


[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy
    numba
    astropy
    nbsphinx
    nbsphinx-link
    sphinx-rtd-theme

requirement_files =
    requirements.txt
